# cpp23-module-implementation-unit-example

./: CMakeLists.txt  main.cpp
example_module/: CMakeLists.txt  example_module.cpp  example_module.ixx
